# cots-catalog

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  part_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
byo/: index.html
catalog/: index.html
changelog/: index.html
compatibility/: index.html
contributing/: index.html
data/: build_templates.json  environment_taxonomy.json  flight_data.jsonl  parts_library.json  preset_beginner_5in.json  preset_cold_weather.json  preset_endurance_survey.json  preset_long_range_relay.json  preset_low_infrastructure.json  preset_partner_sustainment.json  preset_sub_250g.json  preset_tinywhoop_indoor.json  preset_urban_congested.json  preset_urban_high_ew.json  preset_whitefrost.json
data/schema/: mission_project_schema_v2.json  parts_library_schema.json
docs/: byo.md  catalog.md  compatibility.md  index.md  ingest.md  integration.md  limitations.md  physics.md  prompts.md  quickstart.md  resources.md  tools.md
examples/: README.md  check_my_5in.py  ingest_walkthrough.py  long_range_endurance.py  recommend_first_build.py
ingest/: index.html
integration/: index.html
limitations/: index.html
physics/: index.html
prompts/: index.html
quickstart/: index.html
resources/: index.html
scripts/: seed_v050.py  seed_v060.py  seed_v070.py  seed_v100.py  validate_catalog.py
search/: search_index.json
src/architect_companion_mcp/: __init__.py  blueprints.py  catalog.py  compatibility.py  flight_data.py  http_server.py  ingest.py  physics.py  prompts.py  recommend.py  resources.py  server.py  templates.py  validation.py  wizard.py
tests/: test_catalog_quality.py  test_ingest.py  test_server.py
tools/: index.html
web/: index.html
