[project]
name = "architect-companion-mcp"
version = "0.5.0"
description = "Offline-first MCP server for COTS robotics mission planning. Complements the Ceradon Architect suite."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ceradon Systems" }]
dependencies = [
  "mcp>=1.2.0",
]

[project.scripts]
architect-companion-mcp = "architect_companion_mcp.server:main"
architect-companion-ingest = "architect_companion_mcp.ingest:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
